[package]
name = "ForbiddenDoorBot"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
toml = "0.8.15"
tracing = "0.1.40"
tokio = { version = "1.38.1", features = ["full"] }

